[gd_scene load_steps=18 format=3 uid="uid://cxetb3u6c3ag3"]

[ext_resource type="Material" uid="uid://bd0pmxtiwf71x" path="res://materials/flash.tres" id="1_17ni5"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_a4dcu"]
[ext_resource type="Texture2D" uid="uid://ces5de0hropa7" path="res://assets/sprites/yellowbird-midflap.png" id="2_2fhx6"]
[ext_resource type="Texture2D" uid="uid://ukc1dm538agp" path="res://assets/sprites/yellowbird-upflap.png" id="3_gisxe"]
[ext_resource type="Texture2D" uid="uid://bf1cwti1gecgm" path="res://assets/sprites/yellowbird-downflap.png" id="4_lo5ki"]
[ext_resource type="Texture2D" uid="uid://dcybk00ca4bxe" path="res://assets/sprites/redbird-midflap.png" id="5_mr4sq"]
[ext_resource type="Texture2D" uid="uid://dgbdpjqlprj83" path="res://assets/sprites/redbird-upflap.png" id="6_liuxv"]
[ext_resource type="Texture2D" uid="uid://buu1d16bumica" path="res://assets/sprites/redbird-downflap.png" id="7_q6yfd"]
[ext_resource type="AudioStream" uid="uid://g8ldd1a2xwdm" path="res://assets/audio/wing.wav" id="9_rxcsi"]
[ext_resource type="AudioStream" uid="uid://bmgjcgh2048cb" path="res://assets/audio/hit.wav" id="10_4gnmt"]
[ext_resource type="AudioStream" uid="uid://dj18dgsh5ub4i" path="res://assets/audio/die.wav" id="11_emd6x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4jh68"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2fhx6")
}, {
"duration": 1.0,
"texture": ExtResource("3_gisxe")
}, {
"duration": 1.0,
"texture": ExtResource("2_2fhx6")
}, {
"duration": 1.0,
"texture": ExtResource("4_lo5ki")
}],
"loop": true,
"name": &"flap",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_mr4sq")
}, {
"duration": 1.0,
"texture": ExtResource("6_liuxv")
}, {
"duration": 1.0,
"texture": ExtResource("5_mr4sq")
}, {
"duration": 1.0,
"texture": ExtResource("7_q6yfd")
}],
"loop": true,
"name": &"flap_red",
"speed": 11.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d74m4"]
height = 28.0

[sub_resource type="Animation" id="Animation_5imq0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flashState")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wdkcj"]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flashState")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tqcmn"]
_data = {
"RESET": SubResource("Animation_5imq0"),
"flash": SubResource("Animation_wdkcj")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jnw7p"]
radius = 8.0

[node name="Player" type="Area2D"]
z_index = 10
material = ExtResource("1_17ni5")
collision_mask = 0
script = ExtResource("1_a4dcu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_4jh68")
animation = &"flap"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_d74m4")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tqcmn")
}

[node name="FlapSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_rxcsi")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_4gnmt")

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_emd6x")

[node name="Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jnw7p")

[connection signal="area_entered" from="Detection" to="." method="_on_detection_area_entered"]
